--- a/styles.css
+++ b/styles.css
@@ -53,12 +53,17 @@ h1 {
 }
 
 .board-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     height: 100px;
     aspect-ratio: 1;
     border-radius: 15px;
     background-color: rgba(255, 255, 255, 0.137);
     transition: background 500ms ease-in-out;
     cursor: crosshair;
+    font-size: 2rem;
+    font-weight: 800;
 }
 
 .board-box:hover,
